<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-71dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearUpper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/emailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/firstNameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp"
                    android:text="@string/first_name"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lastNameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp"
                    android:text="@string/last_name"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp"
                    android:text="@string/age"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shape_et"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/your_email_hint"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingVertical="10dp"
                    android:text="@string/user_s_email"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/firstNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shape_et"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/your_name_hint"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lastNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shape_et"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/your_last_name_hint"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shape_et"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/your_age_hint"
                    android:inputType="number"
                    android:paddingVertical="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/status_notification_green"
                android:textColor="@color/green"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/status_notification_red"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/activeUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/number_of_active_users"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deletedUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/number_of_deleted_users"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/add_user"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rmBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/remove_user"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/update_user"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
